<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:text="@string/sistema_gradi"
            android:id="@+id/rbSistemaGradi"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            />
        <RadioButton
            android:text="@string/sistema_minuti_decimali"
            android:id="@+id/rbSistemaMinutiDecimali"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            />
        <RadioButton
            android:text="@string/sistema_gradi_decimali"
            android:id="@+id/rbSistemaGradiDecimali"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            />
        <RadioButton
            android:text="@string/sistema_qth"
            android:id="@+id/rbSistemaQTH"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            />
    </RadioGroup>

    <TableLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" android:stretchColumns="1"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:paddingBottom="10dp">

        <!--TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content" android:paddingBottom="5dp">
            <TextView
                android:text="@string/lay_sistema_inserimento_coordinate"
                android:layout_height="fill_parent"
                android:paddingRight="15dp"
                android:focusable="true" android:focusableInTouchMode="true"/-->

        <!--/TableRow-->
        <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingBottom="5dp">

            <TextView
                android:text="@string/lay_latitudine"
                android:layout_height="fill_parent"
                android:paddingRight="15dp"
                android:focusable="true" android:focusableInTouchMode="true"
                android:id="@+id/textViewLatitude"/>
            <TableLayout android:layout_width="fill_parent"
                android:shrinkColumns="0,1,2">
                <TableRow android:layout_width="fill_parent">
                    <EditText android:id="@+id/editLatitudine1"
                        android:layout_weight="1"
                        android:hint="@string/input_latlong_dd"/>
                    <EditText android:id="@+id/editLatitudine2"
                        android:layout_weight="1"
                        android:hint="@string/input_latlong_mm"/>
                    <EditText android:id="@+id/editLatitudine3"
                        android:layout_weight="2"
                        android:hint="@string/input_latlong_ss"/>
                </TableRow>
                <Spinner android:id="@+id/spinnerNord" android:layout_weight="1" android:prompt="@string/lay_scegli_orientamento"/>
            </TableLayout>
        </TableRow>
        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:text="@string/lay_longitudine"
                android:layout_height="fill_parent"
                android:paddingRight="15dp" />
            <TableLayout android:layout_width="fill_parent"
                android:shrinkColumns="0,1,2">
                <TableRow>
                    <EditText android:id="@+id/editLongitudine1"
                        android:layout_weight="1"
                        android:hint="@string/input_latlong_dd"/>
                    <EditText android:id="@+id/editLongitudine2"
                        android:layout_weight="1"
                        android:hint="@string/input_latlong_mm"/>
                    <EditText
                        android:id="@+id/editLongitudine3"
                        android:layout_weight="1"
                        android:hint="@string/input_latlong_ss"/>
                </TableRow>
                <Spinner android:id="@+id/spinnerEst" android:layout_weight="1" android:prompt="@string/lay_scegli_orientamento"/>
            </TableLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>