<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingLeft="10px" android:paddingRight="10px"
  android:id="@+id/mainLayout">
		 
	<TableLayout 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:stretchColumns="1"
		android:paddingTop="30px" android:paddingBottom="30px">
    <TableRow android:layout_width="wrap_content" android:id="@+id/tableRow3" android:layout_height="wrap_content">
	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
	    android:text="@string/input_utm_zona" android:layout_marginRight="5px"></TextView>
	<EditText android:inputType="number" android:id="@+id/editTextUtmZona" android:layout_width="fill_parent" android:layout_height="wrap_content">
	    <requestFocus></requestFocus>
	</EditText>
    </TableRow>
		<TableRow android:layout_width="wrap_content" android:id="@+id/tableRow3" android:layout_height="wrap_content">
			<TextView android:id="@+id/textViewOrigineY" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/input_utm_y" android:layout_marginRight="5px"></TextView>
			<EditText android:inputType="numberSigned" android:id="@+id/editTextY" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow android:layout_width="wrap_content" android:id="@+id/tableRow2" android:layout_height="wrap_content">
	<TextView android:id="@+id/textViewOrigineX" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/input_utm_x" android:layout_marginRight="5px"></TextView>
	<EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="numberSigned" android:id="@+id/editTextX"></EditText>
    </TableRow>
    <TableRow android:layout_width="wrap_content" android:id="@+id/tableRow3" android:layout_height="wrap_content">
			<TextView android:id="@+id/textViewOrigineY" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/input_utm_descrizione" android:layout_marginRight="5px"></TextView>
			<EditText android:id="@+id/editUtmDescrizione" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true"></EditText>
		</TableRow>
	</TableLayout>
	
	<Button android:id="@+id/buttonConverti" android:text="@string/input_utm_converti"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"/>

</LinearLayout>
