<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:id="@+id/mainLayout">
    
	<ScrollView android:layout_width="match_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1">
		
		<LinearLayout
	    	android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"	  		  
		  	android:paddingLeft="10px" android:paddingRight="10px">
		  	
			<it.interfree.leonardoce.convertitorecoordinatelib.components.LatLongView android:layout_width="match_parent" 
				android:layout_height="wrap_content" android:stretchColumns="1"
				android:paddingTop="20px" 
		    	android:id="@+id/inputLongLongConvertire"/>     
		    
			<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" >
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/input_latlong_descrizione" android:layout_marginRight="5px"></TextView>
				<EditText android:id="@+id/editLatLongDescrizione" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true"></EditText>
			</LinearLayout>		
		</LinearLayout>	    
	</ScrollView>
	<LinearLayout android:orientation="horizontal" 
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content">
    	
    	<ToggleButton android:id="@+id/btDaGPS" 
    		android:textOn="@string/input_latlong_gpson"
    		android:textOff="@string/input_latlong_gpsoff"
    		android:layout_height="match_parent" 
    		android:layout_width="fill_parent"
    		android:layout_weight="1"/>
    	<Button android:id="@+id/btConvertiLatLong"
    		android:text="@string/input_latlong_converti"
    		android:layout_height="match_parent" 
    		android:layout_width="fill_parent"
    		android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
