<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:id="@+id/mainLayout">

	<TableLayout 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:stretchColumns="1"
		android:paddingTop="30dp" android:paddingBottom="30dp">
		<TableRow android:layout_width="wrap_content" android:id="@+id/tableRow2" android:layout_height="wrap_content">
			<TextView android:id="@+id/textViewOrigineX" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/input_cassini_x" 
			    android:layout_marginRight="5dp"></TextView>
			<EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="numberSigned" android:id="@+id/editTextX">
				<requestFocus></requestFocus>
			</EditText>
		</TableRow>
		<TableRow android:layout_width="wrap_content" android:id="@+id/tableRow3" android:layout_height="wrap_content">
			<TextView android:id="@+id/textViewOrigineY" 
			    android:layout_width="wrap_content" android:layout_height="wrap_content" 
			    android:text="@string/input_cassini_y" android:layout_marginRight="5dp"></TextView>
			<EditText android:inputType="numberSigned" android:id="@+id/editTextY" android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
		</TableRow>
		<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" 
			    android:text="@string/input_cassini_descrizione" android:layout_marginRight="5dp"></TextView>
			<EditText android:id="@+id/editDescrizione" android:layout_width="fill_parent" android:inputType="text"
			    android:layout_height="wrap_content" android:singleLine="true"></EditText>
		</TableRow>
	</TableLayout>
		
	<Button android:id="@+id/buttonConverti" android:text="@string/input_cassini_converti"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"/>
</LinearLayout>
