<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/mainLayout">
    
	<LinearLayout android:orientation="horizontal" 
				  android:layout_width="match_parent" 
				  android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/input_osm_loc" 
					  android:layout_marginRight="5dp">
		</TextView>
	
					
		<EditText android:layout_width="0dip" android:layout_height="wrap_content" 
				  android:layout_weight="1" 
				  android:inputType="textPostalAddress" android:id="@+id/editTextMapIndirizzo"/>

		<Button
			android:id="@+id/btCercaMaps"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/input_osm_locbt" />

	</LinearLayout>
	
	<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="fill_parent"
				android:layout_weight="1">
		<org.osmdroid.views.MapView
			android:id="@+id/mapview"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			tilesource="Mapnik"
		/>
		<ImageView android:id="@+id/drag"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:src="@drawable/pin_blu"
			   android:visibility="gone"
	  /> 
	</RelativeLayout>
	
	<Button android:id="@+id/btConvertiLatLong"
			android:text="@string/input_latlong_converti"
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"/>

</LinearLayout>
