<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:id="@+id/mainLayout">
  
	<it.interfree.leonardoce.convertitorecoordinatelib.components.TitoloView
		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
		 app:titolo="@string/configurazione_utm_titolo"/>
	
	<LinearLayout
    	android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"	  		  
	  	android:paddingLeft="10px" android:paddingRight="10px">

        <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:stretchColumns="1">
            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/configurazione_spinner_zona_utm" android:layout_marginRight="5px"/>
                <Spinner android:id="@+id/input_zona_utm"
                         android:layout_height="wrap_content"
                         android:layout_width="fill_parent"
                         android:layout_weight="1"
                         android:prompt="@string/configurazione_spinner_zona_utm"/>
            </TableRow>
            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/configurazione_utm_datum" android:layout_marginRight="5px"/>
                <Spinner android:id="@+id/input_datum_utm"
                         android:layout_height="wrap_content"
                         android:layout_width="fill_parent"
                         android:layout_weight="1"
                         android:prompt="@string/configurazione_utm_datum"/>
            </TableRow>
        </TableLayout>
	</LinearLayout>
</LinearLayout>
